chore: add package overrides for react-transliterate dependencies

--- a/package.json
+++ b/package.json
@@ -16,6 +16,12 @@
     "react-dom": "^19.2.0",
     "react-transliterate": "^1.1.9"
   },
+  "overrides": {
+    "react-transliterate": {
+      "react": "$react",
+      "react-dom": "$react-dom"
+    }
+  },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
     "@types/node": "^24.10.0",
